--- a/Task.html
+++ b/Task.html
@@ -6,7 +6,7 @@
     <title>document</title>
 </head>
 <body><center>
-  <h1>Quwstion and answers</h1>  
+  <h1>Question and answers</h1>  
 </center>
 <a href="ordered list.html"> task 1</a><br><br>
 <a href="unordered list.html"> task 2</a><br><br>
