--- a/index.html
+++ b/index.html
@@ -3,31 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my pages</title>
 </head>
 <body>
-    <table border="1" height="150px" width="300px" align="center" cellspacing="0px" cellpadding="2px">
-        <tr>
-            <td>
-                <form action="./login.html" target="_blank">
-                    <center>
-                      <h2><em>Facebook</em></h2>
-                      <label for="email">Email:-</label>
-                      <input type="email" id="email" name="email" placeholder="Enter email or username" required><br><br>
-                      <label for="password">Password:-</label>
-                      <input type="password" id="password" name="password" placeholder="Enter password" required><br><br>
-                      <button style="background-color: beige; color:blue">Login</button><br><br>
-                </form>
-                <form>
-                <a href="./reset.html" target="_blank">Forgotten password?</a>
-                <br><br>
-                <br>
-                <button><a href="./create account.html" target="_blank">Create new account</a></button>
-                </center>
-            </form>
-            </td>
-        </tr>
-
-    </table>
+    <fieldset>
+        <legend><h1>Date validation and clone TG Bus Pass website</h1></legend>
+        <center><a href="Bus pass application.html"> Task 1 : Bus Pass application </a></center><br>
+        <center><a href="Date validation.html"> Task 2 : Date validation </a></center>
+    </fieldset>
 </body>
 </html>
